fix some broken css vars

--- a/src-ui/src/app/components/common/filterable-dropdown/filterable-dropdown.component.scss
+++ b/src-ui/src/app/components/common/filterable-dropdown/filterable-dropdown.component.scss
@@ -42,7 +42,7 @@
   filter: brightness(0.5);
 
   &.active {
-    background-color: var(--ngx-primary-lighten-30);
+    background-color: var(--pngx-primary-lighten-30);
   }
 }
 
